--- a/app/src/main/res/layout/row_mechanic.xml
+++ b/app/src/main/res/layout/row_mechanic.xml
@@ -32,43 +32,35 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:orientation="vertical"
             app:layout_constraintEnd_toStartOf="@+id/callMechanicButton"
             app:layout_constraintHorizontal_bias="0.3"
             app:layout_constraintStart_toEndOf="@id/mechanicImageView"
-            app:layout_constraintTop_toTopOf="parent"
-            android:orientation="vertical">
-        <TextView
-            android:id="@+id/txtMechanicName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="20dp"
-            android:text="Name"
-            android:textColor="@color/colorPrimaryDark"
-            app:layout_constraintEnd_toStartOf="@+id/callMechanicButton"
-            app:layout_constraintHorizontal_bias="0.3"
-            app:layout_constraintStart_toEndOf="@id/mechanicImageView"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent">
 
-        <!--        <TextView-->
-        <!--            android:id="@+id/txtLocation"-->
-        <!--            android:layout_width="wrap_content"-->
-        <!--            android:layout_height="wrap_content"-->
-        <!--            android:layout_marginTop="@dimen/loginViewsMargin"-->
-        <!--            android:text="Location"-->
-        <!--            android:textColor="@color/colorPrimaryDark" />-->
+            <TextView
+                android:id="@+id/txtMechanicName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="20dp"
+                android:text="Name"
+                android:textColor="@color/colorPrimaryDark" />
 
-        <TextView
-            android:id="@+id/txtMechanicSpecialization"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="20dp"
-            android:text="Specialization"
-            android:textColor="@color/colorPrimaryDark"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/rateMechanicButton"
-            app:layout_constraintHorizontal_bias="0.3"
-            app:layout_constraintStart_toEndOf="@id/mechanicImageView"
-            app:layout_constraintTop_toBottomOf="@id/txtMechanicName" />
+            <!--        <TextView-->
+            <!--            android:id="@+id/txtLocation"-->
+            <!--            android:layout_width="wrap_content"-->
+            <!--            android:layout_height="wrap_content"-->
+            <!--            android:layout_marginTop="@dimen/loginViewsMargin"-->
+            <!--            android:text="Location"-->
+            <!--            android:textColor="@color/colorPrimaryDark" />-->
+
+            <TextView
+                android:id="@+id/txtMechanicSpecialization"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="20dp"
+                android:text="Specialization"
+                android:textColor="@color/colorPrimaryDark" />
         </LinearLayout>
 
         <androidx.appcompat.widget.AppCompatButton
