--- a/app/src/main/res/layout/row_manage_parts.xml
+++ b/app/src/main/res/layout/row_manage_parts.xml
@@ -104,7 +104,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
-            android:layout_marginRight="30dp"
+            android:layout_marginEnd="30dp"
             android:layout_marginBottom="30dp"
             android:gravity="center"
             android:orientation="vertical"
