--- a/app/src/main/res/layout/row_mechanic.xml
+++ b/app/src/main/res/layout/row_mechanic.xml
@@ -30,6 +30,7 @@
             app:shapeAppearance="@style/circle" />
 
         <LinearLayout
+            android:id="@+id/ll"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
@@ -70,20 +71,21 @@
             android:layout_marginTop="10dp"
             android:layout_marginEnd="20dp"
             android:drawableStart="@drawable/ic_call"
+            app:layout_constraintStart_toEndOf="@id/ll"
             app:layout_constraintEnd_toStartOf="@+id/locationMechanicButton"
             app:layout_constraintTop_toTopOf="parent" />
+
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/locationMechanicButton"
             style="@style/circleButton"
             android:layout_width="49dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="8dp"
             android:layout_marginEnd="30dp"
             android:drawableStart="@drawable/location_icon"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="callScrapYardButton"
+            app:layout_constraintStart_toEndOf="@id/callMechanicButton"
             app:layout_constraintTop_toTopOf="parent" />
-
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/rateMechanicButton"
