--- a/app/src/main/res/drawable-anydpi/ic_clear.xml
+++ b/app/src/main/res/drawable-anydpi/ic_clear.xml
@@ -3,7 +3,7 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24"
-    android:tint="#76ABAE"
+    android:tint="#31363F"
     android:alpha="0.8">
   <path
       android:fillColor="@android:color/white"
