--- a/app/src/main/res/layout/activity_manage_parts.xml
+++ b/app/src/main/res/layout/activity_manage_parts.xml
@@ -10,11 +10,11 @@
     android:id="@+id/categorie"
      android:layout_height="wrap_content"
     android:layout_width="match_parent"
-    android:text="\t\tParts"
+    android:text="@string/parts"
     android:textStyle="bold"
     android:textSize="35sp"
-    android:paddingLeft="31dp"
-    android:paddingTop="24dp"
+    android:paddingStart="52dp"
+    android:paddingTop="27dp"
     android:textColor="@color/colorPrimaryDark"
     android:background="@color/colorAccent"
     app:layout_constraintTop_toTopOf="parent"
