--- a/app/src/main/res/layout/activity_parts_categories.xml
+++ b/app/src/main/res/layout/activity_parts_categories.xml
@@ -11,11 +11,11 @@
         android:id="@+id/parts_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="\t\tParts Categories"
+        android:text="@string/parts_categories"
         android:textStyle="bold"
         android:textSize="35sp"
-        android:paddingLeft="31dp"
-        android:paddingTop="24dp"
+        android:paddingStart="53dp"
+        android:paddingTop="27dp"
         android:textColor="@color/colorPrimaryDark"
         android:background="@color/colorAccent"
         app:layout_constraintTop_toTopOf="parent"
@@ -36,6 +36,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
+        android:focusable="true"
         android:padding="8dp"
         android:elevation="4dp"
         app:cardCornerRadius="20dp"
