--- a/app/src/main/res/layout/activity_password_reset.xml
+++ b/app/src/main/res/layout/activity_password_reset.xml
@@ -13,7 +13,7 @@
 
     <TextView
         style="@style/viewParent.headerText.NoMode"
-        android:text="Enter the Your Email to Reset Your Password!" />
+        android:text="@string/enter_the_your_email_to_reset_your_password" />
 
 
     <com.google.android.material.textfield.TextInputLayout
@@ -35,7 +35,7 @@
         style="@style/loginButton"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="@dimen/loginViewsMargin"
-        android:text="Send"
+        android:text="@string/send"
         android:onClick="resetPassword"/>
 
 </LinearLayout>
