--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -12,9 +12,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorAccent"
-        android:paddingLeft="31dp"
-        android:paddingTop="24dp"
-        android:text="\t\tSettings"
+        android:paddingStart="52dp"
+        android:paddingTop="27dp"
+        android:text="@string/settings"
         android:textStyle="bold"
         android:textColor="@color/colorPrimaryDark"
         android:textSize="35sp"
@@ -39,8 +39,8 @@
         android:layout_marginTop="60dp"
         android:width="350dp"
         android:padding="7dp"
-        android:drawableLeft="@drawable/changepass_icon"
-        android:text="Change Password"
+        android:drawableStart="@drawable/changepass_icon"
+        android:text="@string/change_password"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/setting_title" />
@@ -51,8 +51,8 @@
         android:layout_marginTop="60dp"
         android:width="350dp"
         android:padding="7dp"
-        android:drawableLeft="@drawable/logout_icon"
-        android:text="Logout"
+        android:drawableStart="@drawable/logout_icon"
+        android:text="@string/logout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/reset_pass" />
@@ -60,13 +60,12 @@
         android:id="@+id/change_lang"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Language:"
+        android:text="@string/language"
         android:textColor="@color/colorPrimaryDark"
         android:textSize="20sp"
         android:textStyle="bold"
         android:layout_marginTop="30dp"
         android:layout_marginStart="30dp"
-        app:layout_constraintEnd_toStartOf="@id/lang"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toTopOf="@id/changel"
         app:layout_constraintTop_toBottomOf="@id/logout"/>
@@ -88,7 +87,7 @@
         android:layout_marginTop="30dp"
         android:width="30dp"
         android:padding="7dp"
-        android:text="Save"
+        android:text="@string/save"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/change_lang"
@@ -108,7 +107,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        android:text="Help and Support"
+        android:text="@string/help_and_support"
         android:textAlignment="textStart"
         android:textColor="@color/colorPrimaryDark"
         android:textSize="24sp"
