--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -90,7 +90,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginTop="20dp"
                             android:gravity="start"
-                            android:text="Info"
+                            android:text="@string/info"
                             android:textAlignment="textStart"
                             android:textColor="@color/colorPrimaryDark"
                             android:textSize="24sp"
@@ -118,7 +118,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="20dp"
-                    android:text="Email:"
+                    android:text="@string/email"
                     android:textColor="@color/colorPrimaryDark"
                     android:textSize="18sp"
                     android:textStyle="bold"
@@ -142,7 +142,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="20dp"
-                    android:text="Location:"
+                    android:text="@string/location_prof"
                     android:textColor="@color/colorPrimaryDark"
                     android:textSize="18sp"
                     android:textStyle="bold"
@@ -154,7 +154,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
-                    android:text="your location"
+                    android:text="@string/your_location"
                     android:textColor="@color/colorPrimary"
                     android:textSize="16sp"
                     app:layout_constraintBaseline_toBaselineOf="@+id/location"
@@ -166,7 +166,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="20dp"
-                    android:text="Phone:"
+                    android:text="@string/phone"
                     android:textColor="@color/colorPrimaryDark"
                     android:textSize="18sp"
                     android:textStyle="bold"
@@ -192,7 +192,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="20dp"
-                    android:text="Specialization:"
+                    android:text="@string/specialization"
                     android:textColor="@color/colorPrimaryDark"
                     android:textSize="18sp"
                     android:textStyle="bold"
@@ -248,7 +248,7 @@
             android:id="@+id/manageparts"
             style="@style/loginButton"
             android:layout_marginBottom="20dp"
-            android:text="Manage Parts"
+            android:text="@string/manage_parts"
             android:textColor="@color/colorPrimaryDark"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
