--- a/app/src/main/res/layout/row_mechanic.xml
+++ b/app/src/main/res/layout/row_mechanic.xml
@@ -34,7 +34,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintEnd_toStartOf="@+id/callMechanicButton"
+            app:layout_constraintEnd_toStartOf="@id/callMechanicButton"
             app:layout_constraintHorizontal_bias="0.3"
             app:layout_constraintStart_toEndOf="@id/mechanicImageView"
             app:layout_constraintTop_toTopOf="parent">
