--- a/app/src/main/res/layout/row_scrapyard.xml
+++ b/app/src/main/res/layout/row_scrapyard.xml
@@ -21,7 +21,7 @@
             android:id="@+id/scrapYardImageView"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:layout_marginLeft="5dp"
+            android:layout_marginStart="5dp"
             android:layout_marginTop="10dp"
             android:scaleType="centerCrop"
             android:src="@drawable/profile_def_icon"
@@ -80,11 +80,11 @@
             android:layout_marginEnd="20dp"
             android:drawableStart="@drawable/ic_call"
             app:layout_constraintStart_toEndOf="@id/linear"
-            app:layout_constraintEnd_toStartOf="@+id/locationMechanicButton"
+            app:layout_constraintEnd_toStartOf="@+id/locationScrapYardButton"
             app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/locationMechanicButton"
+            android:id="@+id/locationScrapYardButton"
             style="@style/circleButton"
             android:layout_width="49dp"
             android:layout_marginTop="10dp"
@@ -106,7 +106,7 @@
             android:text="5/5"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/locationMechanicButton" />
+            app:layout_constraintTop_toBottomOf="@id/locationScrapYardButton" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
