--- a/app/src/main/res/layout/fragment_scrap_yard.xml
+++ b/app/src/main/res/layout/fragment_scrap_yard.xml
@@ -7,29 +7,33 @@
     tools:context=".ScrapYardFragment"
     android:background="@color/colorPrimary">
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/scrapYardSearchTextInputLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:title="Scrap Yard"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:background="@color/themeColor">
-
+   <androidx.cardview.widget.CardView
+       android:id="@+id/cardsreach"
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       android:backgroundTint="@color/colorAccent"
+       app:cardCornerRadius="26dp"
+       android:elevation="8dp"
+       android:layout_marginTop="10dp"
+       android:layout_marginBottom="10dp"
+       android:layout_marginStart="5dp"
+       android:layout_marginEnd="5dp"
+       app:layout_constraintTop_toTopOf="parent"
+       app:layout_constraintStart_toStartOf="parent"
+       app:layout_constraintEnd_toEndOf="parent">
         <SearchView
             android:id="@+id/scrapYardSearch"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:searchIcon="@drawable/ic_search"
             android:queryHint="Search Scrap Yard"/>
-    </com.google.android.material.textfield.TextInputLayout>
+   </androidx.cardview.widget.CardView>
 
     <ListView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/scrapYardListView"
         android:background="@color/colorPrimary"
-        app:layout_constraintTop_toBottomOf="@id/scrapYardSearchTextInputLayout" />
+        app:layout_constraintTop_toBottomOf="@id/cardsreach" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
