--- a/app/src/main/res/layout/fragment_scrap_yard.xml
+++ b/app/src/main/res/layout/fragment_scrap_yard.xml
@@ -7,28 +7,23 @@
     tools:context=".ScrapYardFragment"
     android:background="@color/colorPrimary">
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/scrapYardSearchTextInputLayout"
+    <SearchView
+        android:id="@+id/scrapYardSearch"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:searchIcon="@drawable/ic_search"
+        android:queryHint="Search Scrap Yard"
+        android:layout_margin="10dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:background="@color/themeColor">
-
-        <SearchView
-            android:id="@+id/scrapYardSearch"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:searchIcon="@drawable/ic_search"
-            android:queryHint="Search Scrap Yard"/>
-    </com.google.android.material.textfield.TextInputLayout>
+        android:background="@drawable/button_background_blue" />
 
     <ListView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/scrapYardListView"
         android:background="@color/colorPrimary"
-        app:layout_constraintTop_toBottomOf="@id/scrapYardSearchTextInputLayout" />
+        app:layout_constraintTop_toBottomOf="@id/scrapYardSearch" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
