--- a/app/src/main/res/layout/fragment_mechanic.xml
+++ b/app/src/main/res/layout/fragment_mechanic.xml
@@ -14,11 +14,13 @@
         android:layout_height="wrap_content"
         android:background="@drawable/button_background_blue"
         android:layout_margin="10dp"
-        android:queryHint="Search mechanic"
+        android:queryHint="Search Mechanics"
         android:searchIcon="@drawable/ic_search"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:iconifiedByDefault="false"
+        android:focusable="true"/>
 
     <ListView
         android:id="@+id/mechanicsListView"
