--- a/app/src/main/res/layout/fragment_scrap_yard.xml
+++ b/app/src/main/res/layout/fragment_scrap_yard.xml
@@ -12,12 +12,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:searchIcon="@drawable/ic_search"
-        android:queryHint="Search Scrap Yard"
+        android:queryHint="Search Scrap Yards"
         android:layout_margin="10dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:background="@drawable/button_background_blue" />
+        android:background="@drawable/button_background_blue"
+        android:iconifiedByDefault="false"
+        android:focusable="true"/>
 
     <ListView
         android:layout_width="match_parent"
