--- a/app/src/main/res/layout/fragment_mechanic.xml
+++ b/app/src/main/res/layout/fragment_mechanic.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:background="@drawable/button_background_blue"
         android:layout_margin="10dp"
-        android:queryHint="Search Mechanics"
+        android:queryHint="Search Mechanics..."
         android:searchIcon="@drawable/ic_search"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
